--- a/recall/package.json
+++ b/recall/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~9.1.0",
     "angularx-qrcode": "^2.1.0",
     "core-js": "^2.5.7",
+    "moment": "^2.24.0",
     "ngx-qrcode2": "0.0.9",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
