--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-jwt": "^5.3.3",
     "jwks-rsa": "^1.7.0",
     "mongoose": "^5.9.6",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.8"
   }
 }
