--- a/recall/package.json
+++ b/recall/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0",
+    "@angular/animations": "^9.1.12",
     "@angular/cdk": "^9.2.0",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "~9.1.0",
@@ -35,6 +35,7 @@
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.0.0",
     "ngx-qrcode2": "0.0.9",
+    "ngx-toastr": "^13.0.0",
     "pdfmake": "^0.1.65",
     "rx-subject": "^3.1.0",
     "rxjs": "~6.5.4",
